# Exam-2022-RenYi

./: Fibonacci sequence.c  README.md
Exam-2022-RenYi/: CMakeLists.txt  README.md  students.txt
Exam-2022-RenYi/code/Exam2022/: Exam2022.pro  Students.cpp  Students.h  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Exam-2022-RenYi/code/Exam2022/images/: OIP-C.jfif
Exam-2022-RenYi/code/build-Exam2022-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Exam-2022-RenYi/code/build-Exam2022-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  qrc_images.cpp
